--- a/index.html
+++ b/index.html
@@ -64,19 +64,43 @@
             <div class="container">
                 <h2 class="studio visually-hidden">Strategy</h2>
                 <ul class="list list-two">
-                <li class="element-two"> 
+
+                <div class="strategy">
+                    <svg class="" width="64" height="64">
+                        <use href="./images/icons.svg#icon-antenna1"></use>
+                    </svg>
+                </div>
+                    <li class="element-two"> 
                     <h3 class="title">Strategy</h3>
                     <p class="paragraph">Our goal is to identify the business
                        problem to walk away with the perfect and creative solution. </p>
                 </li>
-                <li class="element-two">
+                
+                <div class="strategy">
+                    <svg class="" width="64" height="64">
+                        <use href="./images/icons.svg#icon-clock1"></use>
+                    </svg>
+                </div>
+                    <li class="element-two">
                     <h3 class="title">Punctuality</h3>
                     <p class="paragraph">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
+
+                <div class="strategy">
+                    <svg class="" width="64" height="64">
+                        <use href="./images/icons.svg#icon-astronaut1"></use>
+                    </svg>
+                </div>
                 <li class="element-two">
                     <h3 class="title">Diligence</h3>
                     <p class="paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
+
+                <div class="strategy">
+                    <svg class="" width="64" height="64">
+                        <use href="./images/icons.svg#icon-diagram1"></use>
+                    </svg>
+                </div>
                 <li class="element-two">
                     <h3 class="title">Technologies</h3>
                     <p class="paragraph">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
