--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
                 <div class="employee">
                      <h3 class="title">Mark Guerrero</h3>
                      <p class="paragraph-contacts">Product Designer</p>
-                     
                      <ul class="ellipse">
                          <li class="ellipse-list">
                             <a href="" class="ellipse-a">
@@ -169,7 +168,6 @@
                     </ul>
                 </div>
                      </li>
-
                      <li class="team">
                      <img src="./images/tomford.jpg"
                       alt="tomford"
@@ -178,23 +176,36 @@
                      <h3 class="title">Tom Ford</h3>
                      <p class="paragraph-contacts">Frontend Developer</p>
 
-                    <ul>
-                        <li>
-                            <svg class="" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
-                            </svg>
-                        </li>
-                        <li>
-                            <svg class="" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
-                            </svg>
-                        </li>
-                        <li>
-                            <svg class="" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
-                            </svg>
-                        </li>
-                    </ul>
+            <ul class="ellipse">
+                <li class="ellipse-list">
+                    <a href="" class="ellipse-a">
+                        <svg class="svg-ellipse" width="16" height="16">
+                            <use href="./images/icons.svg#icon-Ellipse"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="ellipse-a">
+                        <svg class="" width="16" height="16">
+                            <use href="./images/icons.svg#icon-Ellipse1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="ellipse-a">
+                        <svg class="" width="16" height="16">
+                            <use href="./images/icons.svg#icon-Ellipse2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="ellipse-a">
+                        <svg class="" width="16" height="16">
+                            <use href="./images/icons.svg#icon-Ellipse3"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
                 </div>
                      </li>
                 
@@ -206,21 +217,34 @@
                      <h3 class="title">Camila Garcia</h3>
                      <p class="paragraph-contacts">Marketing</p>
 
-                    <ul>
-                        <li>
-                            <svg class="" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
-                            </svg>
+                    <ul class="ellipse">
+                        <li class="ellipse-list">
+                            <a href="" class="ellipse-a">
+                                <svg class="svg-ellipse" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-Ellipse"></use>
+                                </svg>
+                            </a>
                         </li>
                         <li>
-                            <svg class="" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
-                            </svg>
+                            <a href="" class="ellipse-a">
+                                <svg class="" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-Ellipse1"></use>
+                                </svg>
+                            </a>
                         </li>
                         <li>
-                            <svg class="" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
-                            </svg>
+                            <a href="" class="ellipse-a">
+                                <svg class="" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-Ellipse2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" class="ellipse-a">
+                                <svg class="" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-Ellipse3"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -234,23 +258,36 @@
                      <h3 class="title">Daniel Wilson</h3>
                      <p class="paragraph-contacts">UI Designer</p>
 
-                    <ul>
-                        <li>
-                            <svg class="" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
+                <ul class="ellipse">
+                    <li class="ellipse-list">
+                        <a href="" class="ellipse-a">
+                            <svg class="svg-ellipse" width="16" height="16">
+                                <use href="./images/icons.svg#icon-Ellipse"></use>
                             </svg>
-                        </li>
-                        <li>
-                            <svg class="" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="ellipse-a">
+                            <svg class="" width="16" height="16">
+                                <use href="./images/icons.svg#icon-Ellipse1"></use>
                             </svg>
-                        </li>
-                        <li>
-                            <svg class="" width="64" height="64">
-                                <use href="./images/icons.svg#icon-antenna1"></use>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="ellipse-a">
+                            <svg class="" width="16" height="16">
+                                <use href="./images/icons.svg#icon-Ellipse2"></use>
                             </svg>
-                        </li>
-                    </ul>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="ellipse-a">
+                            <svg class="" width="16" height="16">
+                                <use href="./images/icons.svg#icon-Ellipse3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
                 </div>
                      </li>
 
