--- a/index.html
+++ b/index.html
@@ -136,32 +136,32 @@
                 <div class="employee">
                      <h3 class="title">Mark Guerrero</h3>
                      <p class="paragraph-contacts">Product Designer</p>
-                     <ul class="ellipse">
+                     <ul class="ellipse list">
                          <li class="ellipse-list">
                             <a href="" class="ellipse-a">
                             <svg class="svg-ellipse" width="16" height="16">
-                            <use href="./images/icons.svg#icon-Ellipse"></use>
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
                             </svg>
                             </a>
                          </li>
                          <li>
                             <a href="" class="ellipse-a">
                             <svg class="" width="16" height="16">
-                            <use href="./images/icons.svg#icon-Ellipse1"></use>
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                             </a>
                          </li>
                          <li>
                             <a href="" class="ellipse-a">
                             <svg class="" width="16" height="16">
-                            <use href="./images/icons.svg#icon-Ellipse2"></use>
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                             </a>
                          </li>
                         <li>
                             <a href="" class="ellipse-a">
                             <svg class="" width="16" height="16">
-                            <use href="./images/icons.svg#icon-Ellipse3"></use>
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
                             </a>
                         </li>
@@ -176,7 +176,7 @@
                      <h3 class="title">Tom Ford</h3>
                      <p class="paragraph-contacts">Frontend Developer</p>
 
-            <ul class="ellipse">
+            <ul class="ellipse list">
                 <li class="ellipse-list">
                     <a href="" class="ellipse-a">
                         <svg class="svg-ellipse" width="16" height="16">
@@ -217,7 +217,7 @@
                      <h3 class="title">Camila Garcia</h3>
                      <p class="paragraph-contacts">Marketing</p>
 
-                    <ul class="ellipse">
+                    <ul class="ellipse list">
                         <li class="ellipse-list">
                             <a href="" class="ellipse-a">
                                 <svg class="svg-ellipse" width="16" height="16">
@@ -258,7 +258,7 @@
                      <h3 class="title">Daniel Wilson</h3>
                      <p class="paragraph-contacts">UI Designer</p>
 
-                <ul class="ellipse">
+                <ul class="ellipse list">
                     <li class="ellipse-list">
                         <a href="" class="ellipse-a">
                             <svg class="svg-ellipse" width="16" height="16">
