--- a/index.html
+++ b/index.html
@@ -144,21 +144,21 @@
                             </svg>
                             </a>
                          </li>
-                         <li>
+                         <li  class="ellipse-list">
                             <a href="" class="ellipse-a">
                             <svg class="" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                             </a>
                          </li>
-                         <li>
+                         <li  class="ellipse-list">
                             <a href="" class="ellipse-a">
                             <svg class="" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                             </a>
                          </li>
-                        <li>
+                        <li  class="ellipse-list">
                             <a href="" class="ellipse-a">
                             <svg class="" width="16" height="16">
                             <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -180,28 +180,28 @@
                 <li class="ellipse-list">
                     <a href="" class="ellipse-a">
                         <svg class="svg-ellipse" width="16" height="16">
-                            <use href="./images/icons.svg#icon-Ellipse"></use>
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                     </a>
                 </li>
-                <li>
+                <li class="ellipse-list">
                     <a href="" class="ellipse-a">
                         <svg class="" width="16" height="16">
-                            <use href="./images/icons.svg#icon-Ellipse1"></use>
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                     </a>
                 </li>
-                <li>
+                <li class="ellipse-list">
                     <a href="" class="ellipse-a">
                         <svg class="" width="16" height="16">
-                            <use href="./images/icons.svg#icon-Ellipse2"></use>
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                     </a>
                 </li>
-                <li>
+                <li class="ellipse-list">
                     <a href="" class="ellipse-a">
                         <svg class="" width="16" height="16">
-                            <use href="./images/icons.svg#icon-Ellipse3"></use>
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                     </a>
                 </li>
@@ -221,28 +221,28 @@
                         <li class="ellipse-list">
                             <a href="" class="ellipse-a">
                                 <svg class="svg-ellipse" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-Ellipse"></use>
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li>
+                        <li class="ellipse-list">
                             <a href="" class="ellipse-a">
                                 <svg class="" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-Ellipse1"></use>
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li>
+                        <li class="ellipse-list">
                             <a href="" class="ellipse-a">
                                 <svg class="" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-Ellipse2"></use>
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li>
+                        <li class="ellipse-list">
                             <a href="" class="ellipse-a">
                                 <svg class="" width="16" height="16">
-                                    <use href="./images/icons.svg#icon-Ellipse3"></use>
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
@@ -262,36 +262,32 @@
                     <li class="ellipse-list">
                         <a href="" class="ellipse-a">
                             <svg class="svg-ellipse" width="16" height="16">
-                                <use href="./images/icons.svg#icon-Ellipse"></use>
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="ellipse-list">
                         <a href="" class="ellipse-a">
                             <svg class="" width="16" height="16">
-                                <use href="./images/icons.svg#icon-Ellipse1"></use>
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="ellipse-list">
                         <a href="" class="ellipse-a">
                             <svg class="" width="16" height="16">
-                                <use href="./images/icons.svg#icon-Ellipse2"></use>
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="ellipse-list">
                         <a href="" class="ellipse-a">
                             <svg class="" width="16" height="16">
-                                <use href="./images/icons.svg#icon-Ellipse3"></use>
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
                         </a>
                     </li>
                 </ul>
-                </div>
-                     </li>
-
-          </ul>
           </div>
           </section>
         </main>
