--- a/index.html
+++ b/index.html
@@ -146,21 +146,21 @@
                          </li>
                          <li  class="ellipse-list">
                             <a href="" class="ellipse-a">
-                            <svg class="" width="16" height="16">
+                            <svg class="svg-ellipse" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                             </a>
                          </li>
                          <li  class="ellipse-list">
                             <a href="" class="ellipse-a">
-                            <svg class="" width="16" height="16">
+                            <svg class="svg-ellipse" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                             </a>
                          </li>
                         <li  class="ellipse-list">
                             <a href="" class="ellipse-a">
-                            <svg class="" width="16" height="16">
+                            <svg class="svg-ellipse" width="16" height="16">
                             <use href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
                             </a>
@@ -186,21 +186,21 @@
                 </li>
                 <li class="ellipse-list">
                     <a href="" class="ellipse-a">
-                        <svg class="" width="16" height="16">
+                        <svg class="svg-ellipse" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="ellipse-list">
                     <a href="" class="ellipse-a">
-                        <svg class="" width="16" height="16">
+                        <svg class="svg-ellipse" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="ellipse-list">
                     <a href="" class="ellipse-a">
-                        <svg class="" width="16" height="16">
+                        <svg class="svg-ellipse" width="16" height="16">
                             <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                     </a>
@@ -227,14 +227,14 @@
                         </li>
                         <li class="ellipse-list">
                             <a href="" class="ellipse-a">
-                                <svg class="" width="16" height="16">
+                                <svg class="svg-ellipse" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="ellipse-list">
                             <a href="" class="ellipse-a">
-                                <svg class="" width="16" height="16">
+                                <svg class="svg-ellipse" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
@@ -268,21 +268,21 @@
                     </li>
                     <li class="ellipse-list">
                         <a href="" class="ellipse-a">
-                            <svg class="" width="16" height="16">
+                            <svg class="svg-ellipse" width="16" height="16">
                                 <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="ellipse-list">
                         <a href="" class="ellipse-a">
-                            <svg class="" width="16" height="16">
+                            <svg class="svg-ellipse" width="16" height="16">
                                 <use href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="ellipse-list">
                         <a href="" class="ellipse-a">
-                            <svg class="" width="16" height="16">
+                            <svg class="svg-ellipse" width="16" height="16">
                                 <use href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
                         </a>
