--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li class="element-two">
                     <div class="strategy">
                         <svg class="" width="64" height="64">
-                            <use href="./images/icons.svg#icon-antenna1"></use>
+                            <use href="./images/icons.svg#icon-antenna-1"></use>
                         </svg>
                     </div>
                     <h3 class="title">Strategy</h3>
@@ -77,7 +77,7 @@
                 <li class="element-two">
                     <div class="strategy">
                         <svg class="" width="64" height="64">
-                            <use href="./images/icons.svg#icon-clock1"></use>
+                            <use href="./images/icons.svg#icon-clock-1"></use>
                         </svg>
                         </div>
                     <h3 class="title">Punctuality</h3>
@@ -86,7 +86,7 @@
                 <li class="element-two">
                     <div class="strategy">
                         <svg class="" width="64" height="64">
-                            <use href="./images/icons.svg#icon-astronaut1"></use>
+                            <use href="./images/icons.svg#icon-astronaut-1"></use>
                         </svg>
                     </div>
                     <h3 class="title">Diligence</h3>
@@ -95,7 +95,7 @@
                 <li class="element-two">
                     <div class="strategy">
                         <svg class="" width="64" height="64">
-                            <use href="./images/icons.svg#icon-diagram1"></use>
+                            <use href="./images/icons.svg#icon-diagram-1"></use>
                         </svg>
                     </div>
                     <h3 class="title">Technologies</h3>
@@ -288,8 +288,61 @@
                         </a>
                     </li>
                 </ul>
-          </div>
-          </section>
+
+                </div>
+                </ul>
+                </div>
+            </section>
+            <!-- section 5-->
+            <section class="section-customers">
+                <div class="container">
+                 <h2 class="customers">Customers</h2>
+                <ul class="container-list list">
+                    <li class="element-customers ">
+                        <a class="customers-link" href="">
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="element-customers ">
+                        <a class="customers-link" href="">
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="element-customers ">
+                        <a class="customers-link" href="">
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="element-customers ">
+                        <a class="customers-link" href="">
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="element-customers ">
+                        <a class="customers-link" href="">
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="element-customers ">
+                        <a class="customers-link" href="">
+                            <svg class="customers-svg" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                </div>
+            </section>
         </main>
         <!--Футер-->
     <footer class="footer">
