--- a/index.html
+++ b/index.html
@@ -346,12 +346,47 @@
         </main>
         <!--Футер-->
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo link end">Web<span class="span">Studio</span></a>
-            <p class="paragraph-footer">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
-        </div>
+        <div class="footer-div">
+            <div class="container footer-text">
+                 <a href="./index.html" class="logo link end">Web<span class="span">Studio</span></a>
+                 <p class="paragraph-footer">
+                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                </p>
+             </div>
+             <div>
+                    <p class="media-text"> Social media</p>
+                    <ul class="ellipse list">
+                        <li class="ellipse-list">
+                            <a href="" class="ellipse-a">
+                                <svg class="svg-ellipse" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="ellipse-list">
+                            <a href="" class="ellipse-a">
+                                <svg class="svg-ellipse" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="ellipse-list">
+                            <a href="" class="ellipse-a">
+                                <svg class="svg-ellipse" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="ellipse-list">
+                            <a href="" class="ellipse-a">
+                                <svg class="svg-ellipse" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+            </div>
+       </div>
     </footer>
 
 </body>
