--- a/index.html
+++ b/index.html
@@ -346,16 +346,19 @@
         </main>
         <!--Футер-->
     <footer class="footer">
-        <div class="footer-div">
             <div class="container footer-text">
+
+                <div class="footer-text">
+                <div>
                  <a href="./index.html" class="logo link end">Web<span class="span">Studio</span></a>
                  <p class="paragraph-footer">
                  Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
-             </div>
-             <div>
+                </div>
+
+                    <div>         
                     <p class="media-text"> Social media</p>
-                    <ul class="ellipse list">
+                    <ul class="ellipse-media list">
                         <li class="ellipse-list">
                             <a href="" class="ellipse-a">
                                 <svg class="svg-ellipse" width="16" height="16">
@@ -385,7 +388,8 @@
                             </a>
                         </li>
                     </ul>
-            </div>
+                    </div>
+            
        </div>
     </footer>
 
