--- a/index.html
+++ b/index.html
@@ -347,9 +347,7 @@
         <!--Футер-->
     <footer class="footer">
             <div class="container footer-text">
-
-                <div class="footer-text">
-                <div>
+                <div class="footer-div">
                  <a href="./index.html" class="logo link end">Web<span class="span">Studio</span></a>
                  <p class="paragraph-footer">
                  Increase the flow of customers and sales for your business with digital marketing & growth solutions.
