--- a/index.html
+++ b/index.html
@@ -355,32 +355,32 @@
                 </div>
 
                     <div>         
-                    <p class="media-text"> Social media</p>
+                    <p class="media-text">Social media</p>
                     <ul class="ellipse-media list">
                         <li class="ellipse-list">
-                            <a href="" class="ellipse-a">
-                                <svg class="svg-ellipse" width="16" height="16">
+                            <a href="" class="ellipse-aa">
+                                <svg class="svg-ellipse" width="24" height="24">
                                     <use href="./images/icons.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="ellipse-list">
-                            <a href="" class="ellipse-a">
-                                <svg class="svg-ellipse" width="16" height="16">
+                            <a href="" class="ellipse-aa">
+                                <svg class="svg-ellipse" width="24" height="24">
                                     <use href="./images/icons.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="ellipse-list">
-                            <a href="" class="ellipse-a">
-                                <svg class="svg-ellipse" width="16" height="16">
+                            <a href="" class="ellipse-aa">
+                                <svg class="svg-ellipse" width="24" height="24">
                                     <use href="./images/icons.svg#icon-facebook-1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="ellipse-list">
-                            <a href="" class="ellipse-a">
-                                <svg class="svg-ellipse" width="16" height="16">
+                            <a href="" class="ellipse-aa">
+                                <svg class="svg-ellipse" width="24" height="24">
                                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
