--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
             <ul class="list portfolio-menu">
 
                <li class="portfolio-list">
-                <a href="" class="link ">
+                <a href="" class="link portfolio-link">
                 <img src="./images/banking.jpg" alt="banking">
             <div class="portfolio-div ">
                 <h2 class="body">Banking App Interface Concept</h2>
@@ -74,7 +74,7 @@
                 </li>
 
                 <li class="portfolio-list">
-                <a href="" class="link ">
+                <a href="" class="link portfolio-link">
                 <img src="./images/cashless.jpg" alt="cashless">
             <div class="portfolio-div ">
                 <h2 class="body">Cashless Payment</h2>
@@ -84,7 +84,7 @@
                 </li>
 
                 <li class="portfolio-list">
-                <a href="" class="link ">
+                <a href="" class="link portfolio-link">
                 <img src="./images/meditation.jpg" alt="meditation">
             <div class="portfolio-div ">
                 <h2 class="body">Meditation App</h2>
@@ -94,7 +94,7 @@
                 </li>
 
                 <li class="portfolio-list">
-                <a href="" class="link ">
+                <a href="" class="link portfolio-link">
                 <img src="./images/taxi.jpg" alt="taxi">
             <div class="portfolio-div">
                 <h2 class="body">Taxi Service</h2>
@@ -104,7 +104,7 @@
                 </li>
 
                 <li class="portfolio-list">
-                <a href="" class="link ">
+                <a href="" class="link portfolio-link">
                 <img src="./images/screen.jpg" alt="screen">
             <div class="portfolio-div">
                 <h2 class="body">Screen Illustrations</h2>
@@ -114,7 +114,7 @@
                 </li>
 
                 <li class="portfolio-list">
-                <a href="" class="link ">
+                <a href="" class="link portfolio-link">
                 <img src="./images/online.jpg" alt="online">
             <div class="portfolio-div">
                 <h2 class="body">Online Courses</h2>
@@ -124,7 +124,7 @@
                 </li>
 
                 <li class="portfolio-list">
-                <a href="" class="link ">
+                <a href="" class="link portfolio-link">
                 <img src="./images/instagram.jpg" alt="instagram">
             <div class="portfolio-div">
                 <h2 class="body">Instagram Stories Concept</h2>
@@ -134,7 +134,7 @@
                 </li>
 
                 <li class="portfolio-list">
-                <a href="" class="link ">
+                <a href="" class="link portfolio-link">
                 <img src="./images/organic.jpg" alt="cashless">
             <div class="portfolio-div">
                 <h2 class="body">Organic Food</h2>
@@ -144,7 +144,7 @@
                 </li>
 
                 <li class="portfolio-list">
-                <a href="" class="link ">
+                <a href="" class="link portfolio-link">
                 <img src="./images/coffee.jpg" alt="coffee">
             <div class="portfolio-div">
                 <h2 class="body">Fresh Coffee</h2>
